ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
spec:
  rules:
  - host: server.one.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-service
            port:
              number: 80
